# test1zz

./: Cargo.toml  readme.md  validate_pipeline.rs
.kiro/specs/web-crawler-completion/: design.md  requirements.md  tasks.md
config/: crawler.yaml
output/: page-sitemapxml.md  post-sitemapxml.md  sitemap-indexxml.md  sitemapxml.md
outputexample/: community.md  governance.md  index.md  learn.md  policies.md  tools.md
src/: crawler.rs  main.rs  robots.rs
src/config/: app.yaml  config.rs  whitelist.yaml
src/crawler/: chrome_fetcher.rs  config.rs  crawler.rs  domain_detector.rs  errors.rs  file_manager.rs  html_converter.rs  html_fetcher.rs  html_to_markdown.rs  logging.rs  markdown_writer.rs  mod.rs  robots.rs
tests/: integration_tests.rs
