[package]
name = "test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "src/main.rs"

[[bin]]
name = "validate_pipeline"
path = "validate_pipeline.rs"

[lib]
name = "test"
path = "src/lib.rs"

[dependencies]
spider = { version = "2.37.159", features = ["chrome"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
url = "2.4"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"